==History

jerbil-0.2.17 19-Dec-2011

Attempt to fix error when stopping services: cannot read symbol as string. Assume that
it is caused by :jerbil_config option

jerbil-0.2.16 19-Dec-2011

Restart logging after daemon is called

jerbil-0.2.15 19-Dec-2011

Change supervisor to catch StandardError and let SystemExit fall through untouched.
Add opts to log output from daemonize

jerbil-0.2.14 19-Dec-2011

improvements to supervisor class to add daemon log and catch errors more often

jerbil-0.2.12 27-Nov-2011

Attempt to fix bug where restarting service with old records on other servers 
removes new service's record on own server!

jerbil-0.2.11 25-Sep-2011

Set default config file to be module.rb rather than module.conf

jerbil-0.2.10 24-Sep-2011

thor actions: check that a link exists before testing it is equal

jerbil-0.2.9 24-Sep-2011

Add separate re-useable thor module for common install actions

jerbil-0.2.8 21-Sep-2011

Update jerbs install to ensure files are moved to the correct place

jerbil-0.2.7 21-Sep-2011

Add 'etc' to gemspec

jerbil-0.2.6 21-Sep-2011

Include new jerbs command based on thor, and change Jerbil.remove so that it
attempts to remove a service from remote servers even if it is not registered
locally.

jerbil-0.2.5 17-Sep-2011

Adjust RUBYOPT etc in runscript

jerbil-0.2.4 17-Sep-2011

Add chmod to install

jerbil-0.2.3 17-Sep-2011

Correct runscript!

jerbil-0.2.2 17-Sep-2011

Correct uid in jerbs install

jerbil-0.2.1 17-Sep-2011

Adds in the jerbs executable, being a prospective replacement for bin/jerbil using thor
and including an install command

jerbil-0.2.0 08-Sep-2011

Migrate to Jelly 1.0
Add colour to jerbil listings
Fix bug in missing_service that failed to remove from local server
Add test to see if prior registered service is responding and kick it if it is not

jerbil-0.1.12 04-Aug-2011

ensure that jerbild daemon creates things in a defined directory.