@@ -15,7 +15,10 @@ tmtags
 
 ## PROJECT::GENERAL
 coverage
-rdoc
+doc
+doc/*
+doc/**
+
 pkg
 log/**
 
