@@ -1,0 +1,66 @@
+== Bugs
+
+====31-Jan-2012
+
+* a client that does not respond to a verify can hang jerbil! Is it possible
+  put a timeout on?
+
+10-01-2012
+
+sclient will strip out log options when getting its own! Need to change this or add
+an option in Jelly to not strip them.
+
+01-Dec-2011
+
+JerbilService::Client should be relaxed about config options!
+
+Nov-2011
+
+Nasty race condition where remote server deletes registering service from its local 
+server, so everyone knows about a service except the local server! (Should be fixed in 0.2.12)
+
+09-Sep-2011
+
+There is no checking that services registered locally have the same hostname as the
+server. Should not be an issue, but did cause problems during testing.
+
+There is no way of directing a client or service to a particular jerbil server. Should
+only be relevant to testing, could add a :jerbil_config key to the options hash when calling
+get_server, which would always return nil if it had not been set anyway. (Addressed)
+
+05-Sep-2011
+
+When a server assumes control of a missing service because the server is not there, it fails
+to delete its own copy! And when the missing server resumes, it cannot delete the un-deleted
+service because it does not have the right key for that service anymore.
+
+Colored success response for jerbl -v would be a big benefit
+
+01-Aug-2011
+
+1. service-missing is not working as expected. Needs to be tested to see what happens 
+when a server is ungracefully removed. May need to change logic from removing services
+to removing servers. - See above
+
+2. Need to add client config file for jerbil to avoid having readable files everywhere.
+
+23-June-2011
+
+jerbil -V reports the number of times a service has been accessed through the local server.
+Would be good to share all counts across all servers somehow?
+
+17-Apr-2011
+
+If you run jerbil -v on a remote server it appears to remove a service but the removal fails.
+This is because it tries to remove the service locally. Also, if a server disappears then
+the other servers still think the service is available. They need to remove the service manually if
+that is the case!
+
+Fixed in 0.1.0
+------
+17-May-2011
+
+Would be good to hide the key check in a private function: check_key(key) rather than
+expose the underlying mechanism
+
+Also change key to pkey for private key parameters
