@@ -1,11 +1,14 @@
 # Created by Jevoom
 #
-# 19-Dec-2011
-#   Attempt to fix error when stopping services: cannot read symbol as string. Assume that
-#   it is caused by :jerbil_config option
+# 22-Mar-2012
+#   Fix a bug where 1.9 was failing cos instance_methods returns symbols instead of
+#   strings.
 
 module Jerbil
-  Version = '0.2.17'
-  Version_Date = '19-Dec-2011'
-  Ident = 'jerbil-0.2.17 19-Dec-2011'
+  # version set to 0.2.19
+  Version = '0.2.19'
+  # date set to 22-Mar-2012
+  Version_Date = '22-Mar-2012'
+  #ident string set to: jerbil-0.2.19 22-Mar-2012
+  Ident = 'jerbil-0.2.19 22-Mar-2012'
 end
